--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 			
 		<td class="center">
 			<br>
-			<img src="img/research-pic.png" class="center"  width='85%'>
+			<img src="img/research-pic-small.jpg" class="center"  width='85%'>
 		</td>
 		<td>
 		</td>
