--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ display: inline;
 			<tr>
 				<td style="padding:0 30px 0 0;">
 					<div>
-						<img src="img/2023_head.JPG" width='125'>
+						<img src="img/2023_head_small.jpg" width='125'>
 						<!--<img src="img/profile.jpg" width='120' class="hover_img">-->
 					</div>
 				</td>
