--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				SDM 2021, SIGIR 2021, ICDM 2021.
+				SDM 2021, SIGIR 2021, ICDM 2021, UAI 2021.
 			</div>
 			<div class='author'>
 			</div>
