--- a/group.html
+++ b/group.html
@@ -43,22 +43,31 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="https://ruixu-hkust.github.io">Rui Xu</a>
+				<a href="https://yazhengliu.github.io">Yazheng Liu</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				PhD, AI Thrust, HKUST-GZ. 2023 Fall - present (PINN and optimization)
+				PhD, AI Thrust, HKUST-GZ. 2023 Fall - present (responsible AI; ICLR (1), TKDE (1)) 
 			</div>
 		</td>
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="https://yazhengliu.github.io">Yazheng Liu</a>
-				
+				<a href="https://ruixu-hkust.github.io">Rui Xu</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				PhD, AI Thrust, HKUST-GZ. 2023 Fall - present (responsible AI; ICLR (1), TKDE (1)) 
+				PhD, AI Thrust, HKUST-GZ. 2023 Fall - present (PINN, uncertainty quantification)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Rufeng Chen</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				PhD, AI Thrust, HKUST-GZ. 2024 Fall (robotics and safe RL; AAAI (1)) 
 			</div>
 		</td>
 	</tr>
@@ -87,11 +96,11 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Rufeng Chen</a>
+				<a href="">Xiaqiang Tang</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Master, Hangzhou Dianzi University. 2023 Fall - present (project: safe RL, CV)
+				Master, Tongji University. 2023 Fall - present (project: responsible LLM)
 			</div>
 		</td>
 	</tr>
@@ -106,17 +115,67 @@
 			</div>
 		</td>
 	</tr>
-	<!--
 	<tr>
 		<td>
 			<div class='area'>
-				Master students
+				MPhils
 			</div>
 		</td>
 		<td>
 		</td>
 	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Wenqi Qiu</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. 2023 Fall - present (project: 3D reconstruction from brain data)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Hui Wu</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. 2023 Fall - present (project: multi-modal EEG data segmentation)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Zhiran Luo</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. 2023 Fall - present (project: diffusion models for EEG data)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Tianchuang Bai</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. 2023 Fall - present (project: responsible LLM)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Xinyuan Chen</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. 2023 Fall - present (project: causal models for medicine)
+			</div>
+		</td>
+	</tr>
 	
+	<!--
 	<tr>
 		<td>
 			<div class='area'>
