--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				KDD (2018-2022); WWW (2024); SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022); SIGIR (2020-2023); 
+				ICLR (2022-2024); NeurIPS (2022-2023); ICML (2023); KDD (2018-2022); WWW (2024); SIGIR (2020-2023); 
 			</div>
 			<div class='author'>
 			</div>
@@ -60,7 +60,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				AAAI (2019-2022); IJCAI (2020, 2022); ICLR (2022-2024); NeurIPS (2022-2023); ICML (2023).
+				AAAI (2019-2022); IJCAI (2020, 2022); SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022)
 			</div>
 			<div class='author'>
 			</div>
@@ -72,7 +72,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				JAIR, TKDE, TKDD, Tweb
+				JAIR (2021), TKDE (2023), TKDD, Tweb
 			</div>
 			<div class='author'>
 			</div>
