--- a/group.html
+++ b/group.html
@@ -47,7 +47,7 @@
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				PhD, AI Thrust, HKUST-GZ. 2023 Fall - present (responsible AI; ICLR (1), TKDE (1)) 
+				PhD, AI Thrust, HKUST-GZ. 2023 Fall - present (optimization, explainable AI; ICLR (1), TKDE (1)) 
 			</div>
 		</td>
 	</tr>
