--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ display: inline;
 		<h2>News</h2>
 		<p>
 		<font color="#595959" font-family="Palatino">
-			Nov 30, 2023: Welcome Xiaqiang joining us as a research intern.
-			Nov 24, 2023: Welcome Wenqi Qiu, Hui Wu, Zhiran Luo, Tianchuang Bai, and Xingyuan Chen joining us as MPhil students.
-			Nov 14, 2023: Welcome Rufeng Chen joining us as a PhD student.
+			Nov 30, 2023: Welcome Xiaqiang joining us as a research intern.<br>
+			Nov 24, 2023: Welcome Wenqi Qiu, Hui Wu, Zhiran Luo, Tianchuang Bai, and Xingyuan Chen joining us as MPhil students.<br>
+			Nov 14, 2023: Welcome Rufeng Chen joining us as a PhD student.<br>
 			Aug 1, 2023: Welcome Yazheng Liu and Rui Xu joining us as PhD students.
 			<!--
 			<a href="">old news</a>		
