--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ display: inline;
 			Nov 24, 2023: Welcome Wenqi Qiu, Hui Wu, Zhiran Luo, Tianchuang Bai, and Xingyuan Chen joining us as MPhil students.<br>
 			Nov 14, 2023: Welcome Rufeng Chen joining us as a PhD student.<br>
 			Aug 1, 2023: Welcome Yazheng Liu and Rui Xu joining us as PhD students.
-			<!--
+			<button onclick="myFunction()">Click Me</button>
+			<div id="oldNews">
 			<a href="">old news</a>		
 			May 19, 2023: I was promoted to Associate Professor with tenure. Thanks to all those who helped me on my way to tenure!</br>
 			Apr 4, 2022: I received the 2022 NSF <span style="color:#4AEAB6">CAREER</span> award (NSF IIS-<a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2145922&HistoricalAwards=false'>2145922</a>). News release <a href='https://engineering.lehigh.edu/news/article/sihong-xie-pulling-back-curtain-intelligence-behind-ai'>1</a> <a href='https://www.eurekalert.org/news-releases/952387'>2</a>. </em> Thanks NSF and collaborators! </br>
@@ -133,11 +134,21 @@ display: inline;
 			Dec 6, 2019: A joint grant on Efficient, Explainable and Robust Data Scientific Methods for Smart Engineering Systems <br>
 			             &emsp;&emsp; &emsp; &emsp; &emsp; is awarded by the <a href="https://research.cc.lehigh.edu/sites/research.cc.lehigh.edu/files/documents/VPRO/Accelerator%20Award%20History.pdf">Accelerator</a> program.</br>
 			Sep 12, 2019: A grant (NSF CNS-1931042) is awarded. Thanks NSF and collaborators! </br>
-		-->
+</div>
 		</font>
 		</p>
 	</td>
 
+	<script>
+		function myFunction() {
+		  var x = document.getElementById("oldNews");
+		  if (x.style.display === "none") {
+		    x.style.display = "block";
+		  } else {
+		    x.style.display = "none";
+		  }
+		}
+	</script>
 
 </tr>
 </tbody>
