--- a/index.html
+++ b/index.html
@@ -3,26 +3,13 @@
 <title>Sihong Xie's Homepage</title>
 <link rel="stylesheet" type="text/css" href="files/default.css">
 
-<!--
-<style type="text/css">
-.img {
-position: absolute;
-}
-.hover_img {
-position: absolute;
-top: 0;
-left: 0;
-display: none;
-}
-.img:hover .hover_img {
-display: inline;
-}
-.padding-table-columns td
+.oldNews
 {
-    padding:0 5px 0 0; /* Only right padding*/
+  height: 40px;
+  width: 120px;
+  display: none;
 }
-</style>
--->
+
 </head>
 
 <body bgcolor="#ccccff">
@@ -110,10 +97,10 @@ display: inline;
 			Nov 30, 2023: Welcome Xiaqiang joining us as a research intern.<br>
 			Nov 24, 2023: Welcome Wenqi Qiu, Hui Wu, Zhiran Luo, Tianchuang Bai, and Xingyuan Chen joining us as MPhil students.<br>
 			Nov 14, 2023: Welcome Rufeng Chen joining us as a PhD student.<br>
-			Aug 1, 2023: Welcome Yazheng Liu and Rui Xu joining us as PhD students.
-			<button onclick="myFunction()">Click Me</button>
+			Aug 1, 2023: Welcome Yazheng Liu and Rui Xu joining us as PhD students.<br>
+
+			<button onclick="myFunction()">Click for old news at Lehigh</button>
 			<div id="oldNews">
-			<a href="">old news</a>		
 			May 19, 2023: I was promoted to Associate Professor with tenure. Thanks to all those who helped me on my way to tenure!</br>
 			Apr 4, 2022: I received the 2022 NSF <span style="color:#4AEAB6">CAREER</span> award (NSF IIS-<a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2145922&HistoricalAwards=false'>2145922</a>). News release <a href='https://engineering.lehigh.edu/news/article/sihong-xie-pulling-back-curtain-intelligence-behind-ai'>1</a> <a href='https://www.eurekalert.org/news-releases/952387'>2</a>. </em> Thanks NSF and collaborators! </br>
 			Dec 14, 2021: An undergraduate capstone project on interpretable fake review detection </br>
