--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
 		I am an NSF CAREER awardee (2022).
 		</font>
 		
+		</tr>
+		</table>
+		<h2>Opening</h2>
+		<p>
+		<font color="#595959" font-family="Palatino">
+			We are recruiting students at all levels to conduct research on responsible AI, safe RL and robotics, optimization, and statistics. Check out this ad.
+		</font>
+		
 		<!--
 		<p style="font-size:13px">
 		<b>
@@ -100,7 +108,7 @@
 			Aug 1, 2023: Welcome Yazheng Liu and Rui Xu joining us as PhD students.<br>
 
 			<button onclick="myFunction()">Click for old news at Lehigh</button>
-			<div id="oldNews">
+			<div id="oldNews" style="display:none;">
 			May 19, 2023: I was promoted to Associate Professor with tenure. Thanks to all those who helped me on my way to tenure!</br>
 			Apr 4, 2022: I received the 2022 NSF <span style="color:#4AEAB6">CAREER</span> award (NSF IIS-<a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2145922&HistoricalAwards=false'>2145922</a>). News release <a href='https://engineering.lehigh.edu/news/article/sihong-xie-pulling-back-curtain-intelligence-behind-ai'>1</a> <a href='https://www.eurekalert.org/news-releases/952387'>2</a>. </em> Thanks NSF and collaborators! </br>
 			Dec 14, 2021: An undergraduate capstone project on interpretable fake review detection </br>
@@ -121,7 +129,7 @@
 			Dec 6, 2019: A joint grant on Efficient, Explainable and Robust Data Scientific Methods for Smart Engineering Systems <br>
 			             &emsp;&emsp; &emsp; &emsp; &emsp; is awarded by the <a href="https://research.cc.lehigh.edu/sites/research.cc.lehigh.edu/files/documents/VPRO/Accelerator%20Award%20History.pdf">Accelerator</a> program.</br>
 			Sep 12, 2019: A grant (NSF CNS-1931042) is awarded. Thanks NSF and collaborators! </br>
-</div>
+			</div>
 		</font>
 		</p>
 	</td>
