--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@
 <title>Sihong Xie's Homepage</title>
 <link rel="stylesheet" type="text/css" href="files/default.css">
 
-.oldNews
-{
-  height: 40px;
-  width: 120px;
-  display: none;
-}
-
 </head>
 
 <body bgcolor="#ccccff">
@@ -75,14 +68,7 @@
 		<br>
 		I am an NSF CAREER awardee (2022).
 		</font>
-		
-		</tr>
-		</table>
-		<h2>Opening</h2>
-		<p>
-		<font color="#595959" font-family="Palatino">
-			We are recruiting students at all levels to conduct research on responsible AI, safe RL and robotics, optimization, and statistics. Check out this ad.
-		</font>
+		</p>
 		
 		<!--
 		<p style="font-size:13px">
@@ -101,13 +87,21 @@
 		-->
 		<h2>News</h2>
 		<p>
+		<font color="#669999" font-family="Palatino">
+			Recruiting: 
+		</font>
+			students at all levels to work on responsible AI, safe RL and robotics, and optimization.
+			Check out this ad.
+		</p>
+		
+		<p>
 		<font color="#595959" font-family="Palatino">
 			Nov 30, 2023: Welcome Xiaqiang joining us as a research intern.<br>
 			Nov 24, 2023: Welcome Wenqi Qiu, Hui Wu, Zhiran Luo, Tianchuang Bai, and Xingyuan Chen joining us as MPhil students.<br>
 			Nov 14, 2023: Welcome Rufeng Chen joining us as a PhD student.<br>
 			Aug 1, 2023: Welcome Yazheng Liu and Rui Xu joining us as PhD students.<br>
-
-			<button onclick="myFunction()">Click for old news at Lehigh</button>
+			<br>
+			<button onclick="myFunction()" style="padding: 0;border: none;background: none;">Click for old news at Lehigh</button>
 			<div id="oldNews" style="display:none;">
 			May 19, 2023: I was promoted to Associate Professor with tenure. Thanks to all those who helped me on my way to tenure!</br>
 			Apr 4, 2022: I received the 2022 NSF <span style="color:#4AEAB6">CAREER</span> award (NSF IIS-<a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2145922&HistoricalAwards=false'>2145922</a>). News release <a href='https://engineering.lehigh.edu/news/article/sihong-xie-pulling-back-curtain-intelligence-behind-ai'>1</a> <a href='https://www.eurekalert.org/news-releases/952387'>2</a>. </em> Thanks NSF and collaborators! </br>
@@ -133,6 +127,9 @@
 		</font>
 		</p>
 	</td>
+		
+		</tr>
+		</table>
 
 	<script>
 		function myFunction() {
