--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			Recruiting: 
 		</font>
 			students at all levels to work on responsible AI, safe RL and robotics, and optimization.
-			Check out this ad.
+			Check out this <a href="recruitment.html">ad</a> (<a href="recruitment_chn.html">Chinese version</a>).
 		</p>
 		
 		<p>
