--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				ICLR (2022-2024); NeurIPS (2022-2023); ICML (2023); KDD (2018-2022); WWW (2024); SIGIR (2020-2023); 
+				ICLR (2022-2024); NeurIPS (2022-2023); ICML (2023-2024); KDD (2018-2022); WWW (2024); SIGIR (2020-2024); 
 			</div>
 			<div class='author'>
 			</div>
