--- a/group.html
+++ b/group.html
@@ -100,7 +100,7 @@
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Master, Tongji University. 2023 Fall - present (project: responsible LLM)
+				Master, Tongji University. 2023 Fall - present (project: responsible LLM; RAG)
 			</div>
 		</td>
 	</tr>
