--- a/group.html
+++ b/group.html
@@ -96,6 +96,16 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
+				<a href="">Yubiao Yue</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				Master, Guangzhou Medical University. 2024 Spring - present (project: robust and explainable medical image processing)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
 				<a href="">Xiaqiang Tang</a>
 		</div></td>
 		<td width="85%">
