--- a/publications.html
+++ b/publications.html
@@ -50,18 +50,20 @@
 		<td width='83%'>
 		</td>
 	</tr>
+	</tr>
+	<tr>
 	<tr>
 		<td class='conf'>
-			 	ICML 2023
+			 	AAAI 2024
 		</td>
 		<td>
 			<div class='title'>
-				<a name="icml2023ws">Robust Ranking Explanations</a>
+				<a name="aaai24">Incorporating Domain Differential Equations into Graph Convolutional Networks to Lower Generalization Discrepancy</a>
 				<div class='author'>
-					Chao Chen, Chenghua Guo, Guixiang Ma, Ming Zeng, Xi Zhang, Sihong Xie
+					Yue Sun, Chao Chen, Yuesheng Xu, Sihong Xie, Rick S. Blum, Parv Venkitasubramaniam
 				</div>
 				<div>
-					3rd Workshop on Interpretable Machine Learning in Healthcare (IMLH)
+					AI4TS Workshop: AI for Time Series Analysis
 					<a class='pdflink' href='paper/icml2023ws.bib'>[bib]</a>
 					<a class='pdflink' href='https://openreview.net/forum?id=kyLjxxGDtd'>[paper]</a>
 				</div>
