--- a/group.html
+++ b/group.html
@@ -96,6 +96,17 @@
 	
 	<tr>
 		<td width="15%"><div class='conf'>
+				<a href="">Zhaofan Zhang</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				PhD (co-advisor: Hui Xiong), AI Thrust, HKUST-GZ. 2024 Fall (project: RL on graphs)
+			</div>
+		</td>
+	</tr>
+	
+	<tr>
+		<td width="15%"><div class='conf'>
 				<a href=" https://www.linkedin.com/in/jiaxin-liu-99848a168/">Jiaxin Liu</a>
 				
 		</div></td>
@@ -114,6 +125,16 @@
 			</div>
 		</td>
 		<td>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Shuaishuai Zu</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				Master, Southwest University. 2024 Spring - present (project: causal time series data mining)
+			</div>
 		</td>
 	</tr>
 	<tr>
