--- a/group.html
+++ b/group.html
@@ -143,7 +143,7 @@
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Master, Guangzhou Medical University. 2024 Spring - present (project: robust and explainable medical image processing)
+				Master, Guangzhou Medical University. 2024 Spring - present (project: addressing out-of-distribution medical images)
 			</div>
 		</td>
 	</tr>
