--- a/group.html
+++ b/group.html
@@ -74,7 +74,7 @@
 	
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Xiaqiang Tang</a>
+				<a href="https://xiaqiang-tang.github.io/">Xiaqiang Tang</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
