--- a/group.html
+++ b/group.html
@@ -85,7 +85,7 @@
 	
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Jiujiu Chen</a>
+				<a href="https://krystal9917.github.io/">Jiujiu Chen</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
@@ -96,7 +96,7 @@
 	
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Zhaofan Zhang</a>
+				<a href="https://zhangzhaofan.github.io/">Zhaofan Zhang</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
