--- a/group.html
+++ b/group.html
@@ -63,7 +63,7 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Rufeng Chen</a>
+				<a href="https://chenrf1121.github.io/">Rufeng Chen</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
