--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 		<p>
 		<font color="#595959" font-family="Palatino">
 			Feb 20, 2024: Welcome Zhaofan Zhang and Jiujiu Chen joining us as PhD students.<br>
+			Feb 20, 2024: Welcome Xiangrong Liao joining us as a MPhil student.<br>
 			Nov 30, 2023: Welcome Xiaqiang Tang joining us as a research intern.<br>
 			Nov 24, 2023: Welcome Wenqi Qiu, Hui Wu, Zhiran Luo, Tianchuang Bai, and Xingyuan Chen joining us as MPhil students.<br>
 			Nov 14, 2023: Welcome Rufeng Chen joining us as a PhD student.<br>
