--- a/projects.html
+++ b/projects.html
@@ -306,6 +306,7 @@
 
 				We are thankful to following funding agencies for their support to our research.
 				<ul>
+					<li> Explanable novel suspicious element detection on graph using motif-based graph foundation models (Tencent Rhino-bird Program 2024) </li>
 					<li> <span style="color:#4AEAB6">CAREER</span>: Bilevel Optimization for Accountable Machine Learning on Graphs (NSF IIS-<a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2145922&HistoricalAwards=false'>2145922</a>)</li>
 					
 					<li> Program in the Foundations and Applications of Mathematical Optimization and Data Science (Lehigh <a href='https://research.cc.lehigh.edu/researchfutures'>Research Future</a> Grant)</li>
