--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
-			Apr 20, 2024: Awarded a grant from Tencent Rhino-bird Program to support research on suspicious detection on graph. Thank Tencent and collaborators!<br>
+			Apr 20, 2024: Awarded a grant from Tencent Rhino-bird Program to study anomaly detection on large-scale graph. Thank Tencent and collaborators!<br>
 			Feb 20, 2024: Welcome Zhaofan Zhang and Jiujiu Chen joining us as PhD students.<br>
 			Feb 20, 2024: Welcome Xiangrong Liao joining us as a MPhil student.<br>
 			Nov 30, 2023: Welcome Xiaqiang Tang joining us as a research intern.<br>
