--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,22 @@
 		<td width='83%'>
 		</td>
 	</tr>
+	<tr>
+		<td class='conf'>
+			Survey 2024
+		</td>
+		<td>
+			<div class='title'>
+				<a name="uq_graph">Uncertainty Quantification on Graph Learning: A Survey</a>
+				<div class='author'>
+					Chao Chen, Chenghua Guo, Rui Xu, Xiangwen Liao, Xi Zhang, Sihong Xie, Hui Xiong, Philip Yu	
+				</div>
+				<div>
+					arxiv.org<a class='pdflink' href='https://arxiv.org/abs/2404.14642'>[paper]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
 	</tbody>
 </table>
 </div>
