--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		I received my Bachelor's and Master's degrees from the <a href='http://ss.sysu.edu.cn/english/'>School of Software Engineering</a>
 		at <a href='http://sysu.edu.cn'>Sun Yat-Sen University</a> in 2004 and 2008, respectively.
 		<br>
-		I am an NSF CAREER awardee (2022).
+		I am an NSF CAREER awardee (2022). I am currently on the executive committee of ACM SIGSPATIAL China.
 		</font>
 		</p>
 		
@@ -96,6 +96,7 @@
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
+			Apr 25, 2024: Elected into the executive committee of ACM SIGSPATIAL China.
 			Apr 20, 2024: Awarded a grant from Tencent Rhino-bird Program to study anomaly detection on large-scale graph. Thank Tencent and collaborators!<br>
 			Feb 20, 2024: Welcome Zhaofan Zhang and Jiujiu Chen joining us as PhD students.<br>
 			Feb 20, 2024: Welcome Xiangrong Liao joining us as a MPhil student.<br>
