--- a/publications.html
+++ b/publications.html
@@ -53,6 +53,22 @@
 			</div>
 		</td>
 	</tr>
+	<tr>
+		<td class='conf'>
+			Survey 2024
+		</td>
+		<td>
+			<div class='title'>
+				<a name="ood_mip">Out-of-distribution Detection in Medical Image Analysis: A survey</a>
+				<div class='author'>
+					Zesheng Hong, Yubiao Yue, Yubin Chen, Huanjie Lin, Yuanmei Luo, Mini Han Wang, Weidong Wang, Jialong Xu, Xiaoqi Yang, Zhenzhang Li, Sihong Xie
+				</div>
+				<div>
+					arxiv.org<a class='pdflink' href='https://arxiv.org/abs/2404.18279'>[paper]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
 	</tbody>
 </table>
 </div>
