--- a/services.html
+++ b/services.html
@@ -33,11 +33,11 @@
 	<tbody>
 	<tr>
 		<td width="20%"><div class='conf'>
-				Senior PC member
+				Senior PC member or Area Chair
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				AAAI (2022); SDM (2024)	
+				AAAI (2022); SDM (2024); WWW (2025)
 			</div>
 			<div class='author'>
 			</div>
@@ -49,7 +49,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				ICLR (2022-2024); NeurIPS (2022-2024); ICML (2023-2024); KDD (2018-2022); WWW (2024); SIGIR (2020-2024); 
+				ICLR (2022-2025); NeurIPS (2022-2024); ICML (2023-2024); KDD (2018-2022); WWW (2024); SIGIR (2020-2024); 
 			</div>
 			<div class='author'>
 			</div>
@@ -60,7 +60,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				AAAI (2019-2022); IJCAI (2020, 2022); SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022)
+				AAAI (2019-2022, 2025); IJCAI (2020, 2022); SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022)
 			</div>
 			<div class='author'>
 			</div>
