--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
-			Apr 25, 2024: Elected into the executive committee of ACM SIGSPATIAL China.<br>
+			Aug 25, 2024: Elected into the committee of <a href='http://www.ffd-bigsearch.org/bigsearch/index.html'>CIPS BigSearch</a>.<br>
+			Aug 9, 2024: Elected into the executive committee of <a href='https://www.ccf.org.cn/Chapters/TC/TC_Listing/TFBD/'>CCF-BigData</a>.<br>
+			Jul 28, 2024: Elected into the executive committee of <a href='https://www.ccf.org.cn/Chapters/TC/TC_Listing/TCAIPR/'>CCF-AI</a>.<br>
+			Apr 25, 2024: Elected into the executive committee of <a href='https://china.acm.org/SIGSPATIAL-China.html'>ACM SIGSPATIAL China</a>.<br>
 			Apr 20, 2024: Awarded a grant from Tencent Rhino-bird Program to study anomaly detection on large-scale graph. Thank Tencent and collaborators!<br>
 			Feb 20, 2024: Welcome Zhaofan Zhang and Jiujiu Chen joining us as PhD students.<br>
 			Feb 20, 2024: Welcome Xiangrong Liao joining us as a MPhil student.<br>
