--- a/services.html
+++ b/services.html
@@ -33,6 +33,23 @@
 	<tbody>
 	<tr>
 		<td width="20%"><div class='conf'>
+				Academic Committee Service
+		</div></td>
+		<td width="80%">
+			<div class='title'>
+				CIPS-BigSearch (committee member, since 2024 Aug)<br>
+				CCF-BigData (executive committee member, 2024 Aug)<br>
+				CCF-AI (executive committee member, 2024 Jul)<br>
+				ACM SIGSPATIAL China (executive committee member, 2024 Apr)<br>
+			</div>
+			<div class='author'>
+			</div>
+		</td>
+	</tr>
+	<tr height="8px">
+	</tr>
+	<tr>
+		<td width="20%"><div class='conf'>
 				Senior PC member or Area Chair
 		</div></td>
 		<td width="80%">
@@ -43,28 +60,24 @@
 			</div>
 		</td>
 	</tr>
+	<tr height="8px">
+	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
 				Conference PC Member
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				ICLR (2022-2025); NeurIPS (2022-2024); ICML (2023-2024); KDD (2018-2022); WWW (2024); SIGIR (2020-2024); 
+				ICLR (2022-2025); NeurIPS (2022-2024); ICML (2023-2024)<br>
+				KDD (2018-2022); WWW (2024); SIGIR (2020-2024)<br>
+				AAAI (2019-2022, 2025); IJCAI (2020, 2022)<br>
+				SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022)
 			</div>
 			<div class='author'>
 			</div>
 		</td>
 	</tr>
-	<tr>
-		<td width="20%"><div class='conf'>
-		</div></td>
-		<td width="80%">
-			<div class='title'>
-				AAAI (2019-2022, 2025); IJCAI (2020, 2022); SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022)
-			</div>
-			<div class='author'>
-			</div>
-		</td>
+	<tr height="8px">
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
@@ -78,6 +91,8 @@
 			</div>
 		</td>
 	</tr>
+	<tr height="8px">
+	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
 				Conference session chair
@@ -89,6 +104,8 @@
 			<div class='author'>
 			</div>
 		</td>
+	</tr>
+	<tr height="8px">
 	</tr>
 	<tr>
 		<td width="20%"><div class='conf'>
