--- a/teaching.html
+++ b/teaching.html
@@ -43,6 +43,26 @@
 	</tr>
 	<tr>
 		<td width="30%"><div class='conf'>
+				2024 Fall
+		</div></td>
+		<td width="70%">
+			<div class='title'>
+					AIAA 5047 Responsible Artificial Intelligence
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="30%"><div class='conf'>
+				2024 Spring 
+		</div></td>
+		<td width="70%">
+			<div class='title'>
+					AIAA 5046 Fundamentals of Machine Learning
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="30%"><div class='conf'>
 				2023 Fall
 		</div></td>
 		<td width="70%">
