add css; add qr codes

--- a/teaching.html
+++ b/teaching.html
@@ -47,7 +47,7 @@
 		</div></td>
 		<td width="70%">
 			<div class='title'>
-					AIAA 5047 Responsible Artificial Intelligence
+				<a href='teaching/2024_fall_rai/index.html'>AIAA 5047 Responsible Artificial Intelligence</a>
 			</div>
 		</td>
 	</tr>
