--- a/teaching/2024_fall_rai/index.html
+++ b/teaching/2024_fall_rai/index.html
@@ -128,6 +128,13 @@ b { font-weight: bold; }
 <a href="syllabus.pdf">PDF</a></p>-->
 
 <p class='tab'><b>Description: </b>
+AI is enhancing applications in many domains, such as healthcare, finance, manufacturing, etc.,
+while introducing risk, uncertainty, and liability, some of which can lead to critical consequences
+espectially when humans are involved.
+The course introduces the concepts and methods of techniques for reducing AI risk, uncertainty, liability,
+making AI more responsible for the involved applications and humans.
+Topics include: transparency, fairness, security, safety, privacy, and uncertainty of widely-used AI models and algorithms,
+including the most recent 
 
 </p>
 
@@ -218,12 +225,6 @@ Marc G. Bellemare and Will Dabney and Mark Rowland.
 MIT Press, 2023.
 <a href="http://incompleteideas.net/book/the-book-2nd.html">eBook</a>.
 </p> 
-
-<p class='tab'>
-  <b>This website: </b>
-  general course information.
-</p>
-
 
 <p id="schedule"></p>
 <br />
