--- a/teaching/2024_fall_rai/index.html
+++ b/teaching/2024_fall_rai/index.html
@@ -134,7 +134,7 @@ espectially when humans are involved.
 The course introduces the concepts and methods of techniques for reducing AI risk, uncertainty, liability,
 making AI more responsible for the involved applications and humans.
 Topics include: transparency, fairness, security, safety, privacy, and uncertainty of widely-used AI models and algorithms,
-including the most recent 
+including the recent LLM.
 
 </p>
 
