--- a/teaching/2024_fall_rai/index.html
+++ b/teaching/2024_fall_rai/index.html
@@ -187,7 +187,7 @@ textbook solution manuals and previous years' submissions.
 <ul> 
 <li class='item'>
 You can select a project from 
-<a href="project.pdf">Project Description</a>
+<a href="./">Project Description</a>
 (to be released).
 </li>
 
