--- a/teaching/2024_fall_rai/index.html
+++ b/teaching/2024_fall_rai/index.html
@@ -229,7 +229,7 @@ MIT Press, 2023.
 <p id="schedule"></p>
 <br />
 <h2>Schedule </h2>
-Sep 6: Lecture 1 (basics and model transparency) [<a href='./'>slides</a>]
+Sep 6: Lecture 1 - basics and model transparency
 
 <h2> Statement on Academic Integrity </h2>
 All homework, project and exam submissions should be your own work, by the following definitions:
