--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			Jul 28, 2024: Elected into the executive committee of <a href='https://www.ccf.org.cn/Chapters/TC/TC_Listing/TCAIPR/'>CCF-AI</a>.<br>
 			Jun 14, 2024: Invited talk at Anhui University.<br>
 			Apr 25, 2024: Elected into the executive committee of <a href='https://china.acm.org/SIGSPATIAL-China.html'>ACM SIGSPATIAL China</a>.<br>
-			Apr 20, 2024: Awarded a grant from Tencent Rhino-bird Program to study anomaly detection on large-scale graph. Thank Tencent and collaborators!<br>
+			Apr 20, 2024: Awarded a Tencent Rhino-bird grant to study anomaly detection on large-scale graph. Thank Tencent and collaborators!<br>
 			Feb 20, 2024: Welcome Zhaofan Zhang and Jiujiu Chen joining us as PhD students.<br>
 			Feb 20, 2024: Welcome Xiangrong Liao joining us as a MPhil student.<br>
 			Nov 30, 2023: Welcome Xiaqiang Tang joining us as a research intern.<br>
