--- a/services.html
+++ b/services.html
@@ -68,10 +68,10 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				ICLR (2022-2025); NeurIPS (2022-2024); ICML (2023-2024)<br>
-				KDD (2018-2022); WWW (2024); SIGIR (2020-2024)<br>
-				AAAI (2019-2022, 2025); IJCAI (2020, 2022)<br>
-				SDM (2018-2022); ICDM (2017-2021); CIKM (2017-2022)
+				ICLR (2022-2025), NeurIPS (2022-2024), ICML (2023-2024)<br>
+				KDD (2018-2022), WWW (2024), SIGIR (2020-2024)<br>
+				AAAI (2019-2022, 2025), IJCAI (2020, 2022)<br>
+				SDM (2018-2022), ICDM (2017-2021), CIKM (2017-2022)
 			</div>
 			<div class='author'>
 			</div>
