--- a/services.html
+++ b/services.html
@@ -85,9 +85,9 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				Neural Networks by Elsevier (2024), the Journal of AI Research (JAIR) (2021)<br>
-				Frontiers in Big Data (2022), Transactions on Knowledge Discovery from Data (TKDD) (2014, 2016 - 2018)<br>
-				Transactions on Knowledge and Data Engineering (TKDE) (2017-2020, 2022), and the Transactions on the Web (TWeb) (2018, 2019, 2022).
+				Neural Networks by Elsevier (2024), JAIR (2021)<br>
+				Frontiers in Big Data (2022), TKDD (2014, 2016 - 2018)<br>
+				TKDE (2017-2020, 2022), TWeb (2018, 2019, 2022).
 			</div>
 			<div class='author'>
 			</div>
