add cv sep 2024

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			Nansha, Guangzhou, Guangdong, China <a href="img/hkust-gz-location.jpg"><img src="img/map-maker.png" width="18px"></a><br><br>
 		Email: &lt;lastname&gt;&lt;firstname&gt;1@gmail.com<br>
 		or &lt;firstname&gt;&lt;lastname&gt;@hkust-gz.edu.cn<br><br>
-		<a href="CV_SihongXie_Apr_2022.pdf">CV</a> (last updated Aug 20, 2023).
+		<a href="CV_SihongXie_Sep_2024.pdf">CV</a> (last updated Sep 24, 2024).
 		</font>
 				</td>
 				
