--- a/services.html
+++ b/services.html
@@ -85,7 +85,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				Neural Networks by Elsevier (2024), JAIR (2021)<br>
+				Neural Networks by Elsevier (2024), JAIR (2021), Artificial Intelligence Review (Springer Nature) <br>
 				Frontiers in Big Data (2022), TKDD (2014, 2016 - 2018)<br>
 				TKDE (2017-2020, 2022), TWeb (2018, 2019, 2022).
 			</div>
