--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		I received my Bachelor's and Master's degrees from the <a href='http://ss.sysu.edu.cn/english/'>School of Software Engineering</a>
 		at <a href='http://sysu.edu.cn'>Sun Yat-Sen University</a> in 2004 and 2008, respectively.
 		<br>
-		I am an NSF CAREER awardee (2022). I am currently on the executive committee of ACM SIGSPATIAL China.
+		I am an NSF CAREER awardee (2022). I am currently on the executive committee of ACM SIGSPATIAL China, CCF-AI, and CCF-BigData.
 		</font>
 		</p>
 		
