add NIPS 2024, ICDM 2024 papers

--- a/publications.html
+++ b/publications.html
@@ -82,8 +82,75 @@
 		<td width='83%'>
 		</td>
 	</tr>
+	<tr>
+		<td class='conf'>
+			 	NeurIPS 2024
+		</td>
+		<td>
+			<div class='title'>
+				<a name="Chen2024nips">
+					Training for Stable Explanation for Free.</a>
+				<div class='author'>
+					Chao Chen, Chenghua Guo, Rufeng Chen, Guixiang Ma, Ming Zeng, Xiangwen Liao, Xi, Zhang, and Sihong Xie*
+				</div>
+				<div>
+					<a class='pdflink' href='.'>[bib]</a>
+					<a class='pdflink' href='.'>[paper]</a>
+				</div>
+			</div>
+		</td>
 	</tr>
 	<tr>
+		<td class='conf'>
+			 	NeurIPS 2024
+		</td>
+		<td>
+			<div class='title'>
+				<a name="Guo2024nips">Linear Uncertainty Quantification of Graphical Model Inference.</a>
+				<div class='author'>
+					Chenghua Guo, Han Yu, Jiaxin Liu, Chao Chen, Qi Li, Sihong Xie*, and Xi Zhang*
+				</div>
+				<div>
+					<a class='pdflink' href='.'>[bib]</a>
+					<a class='pdflink' href='.'>[paper]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td class='conf'>
+			 	NeurIPS 2024
+		</td>
+		<td>
+			<div class='title'>
+				<a name="Liu2024nips">Enhancing Robustness of Graph Neural Networks on Social Media with Explainable Inverse Reinforcement Learning.</a>	
+				<div class='author'>
+					Yuefei Lyu, Sihong Xie, Chaozhuo Li, Xi Zhang*
+				</div>
+				<div>
+					<a class='pdflink' href='.'>[bib]</a>
+					<a class='pdflink' href='.'>[paper]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td class='conf'>
+			 	ICDM 2024
+		</td>
+		<td>
+			<div class='title'>
+				<a name="Wang2024icdm">Periodic Prompt on Dynamic Heterogeneous Graph for Next Basket Recommendation.</a>
+				<div class='author'>
+					Ru-Bin Li, Man-Sheng Chen, Xin-Yu Ding, Chang-Dong Wang, Sihong Xie, Shuangyin Liu, Min Chen, and Mohsen Guizani
+				</div>
+				<div>
+					<a class='pdflink' href='.'>[bib]</a>
+					<a class='pdflink' href='.'>[paper]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
 	<tr>
 		<td class='conf'>
 			 	AAAI 2024
