--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
+			Sep 26, 2024: Three papers accepted to NeurIPS 2024.<br>
 			Sep 22, 2024: Give a talk on Reliable Graph-based MARL at a ACM SIGSPATIAL China conference.<br>
+			Sep 6, 2024: One paper accepted to ICDM 2024.<br>
 			Aug 25, 2024: Elected into the committee of <a href='http://www.ffd-bigsearch.org/bigsearch/index.html'>CIPS BigSearch</a>.<br>
 			Aug 22, 2024: Invited talk at Shandong University.<br>
 			Aug 9, 2024: Elected into the executive committee of <a href='https://www.ccf.org.cn/Chapters/TC/TC_Listing/TFBD/'>CCF-BigData</a>.<br>
