--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				ICLR (2022-2025), NeurIPS (2022-2024), ICML (2023-2024)<br>
+				ICLR (2022-2025), NeurIPS (2022-2024), ICML (2023-2024), AISTAT (2024)<br>
 				KDD (2018-2022), WWW (2024), SIGIR (2020-2024)<br>
 				AAAI (2019-2022, 2025), IJCAI (2020, 2022)<br>
 				SDM (2018-2022), ICDM (2017-2021), CIKM (2017-2022)
@@ -87,7 +87,7 @@
 			<div class='title'>
 				Neural Networks by Elsevier (2024), JAIR (2021), Artificial Intelligence Review (Springer Nature) <br>
 				Frontiers in Big Data (2022), TKDD (2014, 2016 - 2018)<br>
-				TKDE (2017-2020, 2022), TWeb (2018, 2019, 2022).
+				TKDE (2017-2020, 2022), TWeb (2018, 2019, 2022), Springer Nature (2024).
 			</div>
 			<div class='author'>
 			</div>
