--- a/services.html
+++ b/services.html
@@ -85,9 +85,9 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				Neural Networks by Elsevier (2024), JAIR (2021), Artificial Intelligence Review (Springer Nature) <br>
+				Neural Networks by Elsevier (2024), JAIR (2021), Artificial Intelligence Review (Springer Nature) (2024) <br>
 				Frontiers in Big Data (2022), TKDD (2014, 2016 - 2018)<br>
-				TKDE (2017-2020, 2022), TWeb (2018, 2019, 2022), Springer Nature (2024).
+				TKDE (2017-2020, 2022), TWeb (2018, 2019, 2022).
 			</div>
 			<div class='author'>
 			</div>
