--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
+			Dec 12, 2024: Will give a talk on Reliable Graph Learning at a workshop organized by HKUST and HKUST-GZ at Hong Kong.<br>
+			Nov 29, 2024: Give a talk at School of AI Jilin University on Reliable Graph Learning. <a link='slides/reliable-graph-learning-slides.pdf'>slides</a>.<br>
 			Sep 26, 2024: Three papers accepted to <a href='https://neurips.cc/'>NeurIPS 2024</a>.<br>
 			Sep 22, 2024: Give a talk on Reliable Graph-based MARL at a ACM SIGSPATIAL China conference.<br>
 			Sep 6, 2024: One paper accepted to ICDM 2024.<br>
