--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
 		<font color="#669999" font-family="Palatino">
 			Recruiting: 
 		</font>
-			students at all levels to work on responsible AI, safe RL and robotics, and optimization.
+			students at all levels to work on reliable graph learning, foundation models, and RL.
 			Check out this <a href="recruitment.html">ad</a> (<a href="recruitment_chn.html">Chinese version</a>).
 		</p>
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
 			Dec 12, 2024: Will give a talk on Reliable Graph Learning at a workshop organized by HKUST and HKUST-GZ at Hong Kong.<br>
-			Nov 29, 2024: Give a talk at School of AI Jilin University on Reliable Graph Learning. <a link='slides/reliable-graph-learning-slides.pdf'>slides</a>.<br>
+			Nov 29, 2024: Give a talk at School of AI Jilin University on Reliable Graph Learning. <a href='slides/reliable-graph-learning-slides.pdf'>slides</a>.<br>
 			Sep 26, 2024: Three papers accepted to <a href='https://neurips.cc/'>NeurIPS 2024</a>.<br>
-			Sep 22, 2024: Give a talk on Reliable Graph-based MARL at a ACM SIGSPATIAL China conference.<br>
+			Sep 22, 2024: Give a talk on Reliable Graph-based MARL at a ACM SIGSPATIAL China conference. <a link=''></a>><br>
 			Sep 6, 2024: One paper accepted to ICDM 2024.<br>
 			Aug 25, 2024: Elected into the committee of <a href='http://www.ffd-bigsearch.org/bigsearch/index.html'>CIPS BigSearch</a>.<br>
 			Aug 22, 2024: Invited talk at Shandong University.<br>
