--- a/index.html
+++ b/index.html
@@ -90,16 +90,15 @@
 		<font color="#669999" font-family="Palatino">
 			Recruiting: 
 		</font>
-			students at all levels to work on reliable graph learning, foundation models, and RL, with applications
-			to healthcare, finance, robotics, and smart manufacturing.
-			Check out the lab introduction <a href='slides/ExRAIL.pdf'>poster</a>,
-			a <a href="recruitment.html">ad</a>
+		students at all levels to work on reliable graph learning, foundation models, and RL,<br>
+		&nbsp; &nbsp; &nbsp; &nbsp; with applications to healthcare, finance, robotics, and smart manufacturing.<br>
+		&nbsp; &nbsp; &nbsp; &nbsp; Check out the lab introduction <a href='slides/ExRAIL.pdf'>poster</a>, a <a href="recruitment.html">ad</a>
 			(<a href="recruitment_chn.html">Chinese version</a>).
 		</p>
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
-			Dec 12, 2024: Talk on Reliable Graph Learning at a workshop co-organized by HKUST and HKUST-GZ at Hong Kong.<br>
+			Dec 12, 2024: Talk on Reliable Graph Learning at Hong Kong.<br>
 			Nov 29, 2024: Talk at School of AI Jilin University on Reliable Graph Learning. <a href='slides/reliable-graph-learning-slides.pdf'>slides</a>.<br>
 			Sep 26, 2024: Three papers accepted to <a href='https://neurips.cc/'>NeurIPS 2024</a>.<br>
 			Sep 22, 2024: Talk on Reliable Graph-based MARL at a ACM SIGSPATIAL China conference. <a href=''></a>><br>
