--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 			Recruiting: 
 		</font>
 		students at all levels to work on reliable graph learning, foundation models, and RL,<br>
-		&nbsp; &nbsp; &nbsp; &nbsp; with applications to healthcare, finance, robotics, and smart manufacturing.<br>
-		&nbsp; &nbsp; &nbsp; &nbsp; Check out the lab introduction <a href='slides/ExRAIL.pdf'>poster</a>, a <a href="recruitment.html">ad</a>
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; with applications to healthcare, finance, robotics, and smart manufacturing.<br>
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Check out the lab introduction <a href='slides/ExRAIL.pdf'>poster</a>, a <a href="recruitment.html">ad</a>
 			(<a href="recruitment_chn.html">Chinese version</a>).
 		</p>
 		
