--- a/group.html
+++ b/group.html
@@ -158,11 +158,31 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
+				<a href="">Ruijie Li</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. Starting 2025 Fall (project: medical data analysis)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Yi Wang</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. 2024 Fall - present. (project: efficient LLM fine-tuning)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
 				<a href="">Zesheng Hong</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				HKUST-GZ. 2024 Spring - present (project: addressing out-of-distribution medical images)
+				HKUST-GZ. 2024 Spring - 2024 Summer. (project: addressing out-of-distribution medical images)
 			</div>
 		</td>
 	</tr>
